# dlmusic

./: .gitignore  CHANGELOG.md  README.md  dlmusic  pyproject.toml  test_spot.py
.github/workflows/: ci.yml  release.yml
src/dlmusic/: __init__.py  __main__.py  cli.py  config.py  dedup.py  downloader.py  extractors.py  gui.py
tests/: test_dedup.py  test_extractors.py  test_gui.py
