[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlmusic"
version = "2.0.0"
description = "Parallel Playlist -> MP3 Downloader"
authors = [
    {name = "Aswin Ganga", email = "aswinganga@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "spotapi",
    "rich",
    "yt-dlp",
    "mutagen",
    "syncedlyrics",
    "PyQt6",
    "pytest-qt"
]

[project.scripts]
dlmusic = "dlmusic.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
